# KeepIt

./: MiComands.md  README.md
backend/: main.py  pyproject.toml  requirements.txt  todo.db
backend/core/: config.py  security.py
backend/database/: db.py
backend/models/: task.py  tickets.py  user.py
backend/routes/: auth.py  tasks.py  tickets.py
frontend/: .env  App.js  package-lock.json  package.json
frontend/src/core/: api.js
frontend/src/screens/: TicketCreateScreen.js  TicketEditScreen.js  TicketListScreen.js
frontend/src/templates/: TicketForm.js
frontend_mobile/: App.js  app.json  package-lock.json  package.json
frontend_mobile/navigation/: stack.js
frontend_mobile/screens/: home-screeen.js  profile-screen.js
frontend_web/: package-lock.json  package.json
frontend_web/src/: App.jsx  api.js
frontend_web/src/pages/: AddTicket.jsx  DeleteTicket.jsx  ListTickets.jsx  UpdateTicket.jsx
